# my_profile_app

./: 404.html  Cargo.toml  Trunk.toml  index.html  my_profile_app-19d9985bea938563.js  my_profile_app-19d9985bea938563_bg.wasm  my_profile_app-684ef0326c45cb7.js  my_profile_app-684ef0326c45cb7_bg.wasm  my_profile_app-763a435ecf8109d9.js  my_profile_app-763a435ecf8109d9_bg.wasm  my_profile_app-7800ffc32c1b736f.js  my_profile_app-7800ffc32c1b736f_bg.wasm  my_profile_app-949d855dd6b46af4.js  my_profile_app-949d855dd6b46af4_bg.wasm  styles.css
src/: components.rs  main.rs  pages.rs
src/components/: fetch_data.rs  input_form.rs  profile.rs
src/pages/: about.rs  home.rs  not_found.rs  utils.rs
