[package]
name = "my_profile_app"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] } # JSONパース (第3章)
serde_json = "1.0.140"
wasm-bindgen-futures = "0.4.50" # 非同期処理 (第3章)
web-sys = "0.3.77"
yew = { version = "0.21.0", features = ["csr"] } # Yewの基本 (第2章)
yew-router = { version = "0.18.0", features = ["hash"] } # ルーティング (第3章)
